# pyillogical

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
illogical/: __init__.py  evaluable.py  illogical.py  options.py
illogical/expression/comparison/: comparison.py  eq.py  ge.py  gt.py  in_exp.py  includes.py  le.py  lt.py  ne.py  nin.py  none.py  overlap.py  prefix.py  present.py  suffix.py
illogical/expression/logical/: and_exp.py  logical.py  nor.py  not_exp.py  or_exp.py  xor.py
illogical/operand/: collection.py  reference.py  value.py
illogical/parser/: parse.py
tests/: test_evaluable.py  test_illogical.py  test_parse.py
tests/expression/comparison/: test_comparison.py  test_eq.py  test_ge.py  test_gt.py  test_in.py  test_le.py  test_lt.py  test_ne.py  test_nin.py  test_none.py  test_overlap.py  test_prefix.py  test_present.py  test_suffix.py
tests/expression/logical/: test_and.py  test_logical.py  test_nor.py  test_not.py  test_or.py  test_xor.py
tests/operand/: test_collection.py  test_reference.py  test_value.py
